--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -4,9 +4,10 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start" : "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "lint": "tslint \"src/**/*.ts\"",
-    "bundle": "ng build --dev",
+    "bundle": "ng build && gulp",
+    "gulp": "gulp",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
@@ -26,12 +27,16 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "concurrently": "^2.2.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.41",
     "angular-cli": "1.0.0-beta.16",
     "codelyzer": "~0.0.26",
+    "concurrently": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-gzip": "^1.4.0",
+    "gulp-uglify": "^2.0.0",
     "primeng": "^1.0.0-beta.16",
+    "pump": "^1.0.1",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "2.0.2"
