update references and readme

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ghi-quotation",
+  "name": "angular2-spring",
   "description": "stand alone application for quotation",
   "main": "",
   "license": "MIT",
